--- a/styles/global.css
+++ b/styles/global.css
@@ -49,4 +49,42 @@
   --paragraph-small: 500 0.75rem/1.5 var(--ff-roboto-flex);
   --label-medium: 700 1.25rem/1.5 var(--ff-roboto-flex);
   --label-small: 700 1rem/1.5 var(var(--ff-roboto-flex));
+  --label-large: 700 1.25rem/1.5 var(var(--ff-roboto-flex));
+}
+
+body {
+  background: var(--background-primary) url(../assets/image.png) no-repeat
+    center/cover;
+}
+
+.app {
+  height: 100vh;
+  width: 100vw;
+  background: linear-gradient(180deg, #000000 0%, #00000060 100%);
+  padding: 4.75rem 8.375rem 0;
+  color: var(--content-primary);
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+
+  img {
+    width: 2.375rem;
+    height: 2.375rem;
+  }
+
+  span {
+    font: 700 1.5rem/1.3 var(--ff-sora);
+    letter-spacing: -4%;
+  }
+}
+
+h1 {
+  font: var(--display-large);
+}
+
+h2 {
+  font: var(--label-large);
 }
