feat: add sort numbers and insert layout results

--- a/styles/main.css
+++ b/styles/main.css
@@ -107,11 +107,10 @@ main {
           height: 5.25rem;
           color: var(--content-brand);
           font: var(--result);
+          text-align: center;
         }
-      }
-
-      button {
       }
     }
   }
 }
+
