--- a/styles/form.css
+++ b/styles/form.css
@@ -1,14 +1,14 @@
 input[type="text"] {
-  position: relative;
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 100%;
   margin-top: 0.5rem;
   color: var(--content-primary);
   background-color: var(--background-secondary);
-  border-radius: 10px;
   border: none;
+  border-radius: 10px;
   text-align: center;
-  z-index: 1;
 }
 
 input[type="checkbox"] {
