--- a/styles/global.css
+++ b/styles/global.css
@@ -105,3 +105,29 @@ input[type="text"] {
 fieldset {
   border: none;
 }
+
+@media (max-width: 80em) {
+  .app {
+    height: auto;
+    width: 100%;
+    padding: 2.75rem 2.25rem;
+  }
+
+  nav {
+    justify-content: center;
+    gap: 0.75rem;
+
+    img {
+      width: 2.125rem;
+      height: 2.125rem;
+    }
+  }
+
+  h1 {
+    font: var(--display-medium);
+  }
+
+  h2 {
+    font: var(--label-medium);
+  }
+}
